# oscc

./: .gitignore  1  10  11  12  13  14  15  16  2  3  4  5  6  7  8  9  CONTRIBUTING.md  Dockerfile  Jenkinsfile  LICENSE.md  OSCC-CODING.md  README.md
api/: CMakeLists.txt  OsccConfig.cmake  README.md
api/include/: macros.h  oscc.h  vehicles.h
api/include/can_protocols/: brake_can_protocol.h  config_can_protocol.h  fault_can_protocol.h  global_can_protocol.h  magic.h  oscc.dbc  steering_can_protocol.h  throttle_can_protocol.h
api/include/vehicles/: kia_niro.dbc  kia_niro.h  kia_soul.h  kia_soul_ev.dbc  kia_soul_ev.h  kia_soul_niro.h  kia_soul_petrol.dbc  kia_soul_petrol.h  vehicles.h
api/src/: oscc.c
api/src/internal/: oscc.h
api/tests/: CMakeLists.txt  initialize_vcan.sh
api/tests/features/: checking_faults.feature  oscc.feature
api/tests/property/: Cargo.toml  build.rs
api/tests/property-hw/: Cargo.toml  build.rs
api/tests/property/src/: lib.rs  (+1 more)
api/tests/vehicle-features/: oscc.feature
applications/joystick_commander/: CMakeLists.txt  README.md
applications/joystick_commander/include/: commander.h  joystick.h  pid.h
applications/joystick_commander/src/: commander.c  commander.c.orig  joystick.c  main.c  pid.c
control/joystick_commander/: BUILD.md  CMakeLists.txt  Makefile
control/joystick_commander/include/: can_read.h  commander.h  joystick.h  macros.h  messages.h  oscc_interface.h
control/joystick_commander/nbproject/: configurations.xml  project.xml
control/joystick_commander/src/: can_read.c  commander.c  joystick.c  main.c  messages.c  node.c  oscc_interface.c  oscc_socketcan.c
firmware/: CMakeLists.txt
firmware/arduino_libraries/DAC_MCP49xx/: README.txt
firmware/arduino_libraries/Filters/: FilterDerivative.cpp  FilterDerivative.h  FilterOnePole.cpp  FilterOnePole.h  FilterTwoPole.cpp  FilterTwoPole.h  Filters.h  FloatDefine.h  RunningStatistics.cpp  RunningStatistics.h  keywords.txt
firmware/arduino_libraries/FiniteStateMachine/: FiniteStateMachine.cpp  FiniteStateMachine.h  LED_FSM.vsd  keywords.txt
firmware/arduino_libraries/PID/: PID.c  PID.h
firmware/arduino_libraries/can_frame/: can_frame.h
firmware/arduino_libraries/common/: common.h
firmware/arduino_libraries/control_protocol_can/: control_protocol_can.h
firmware/arduino_libraries/mcp_can/: README.md  keywords.txt  mcp_can.cpp  mcp_can.h
firmware/arduino_make/: Arduino.mk
firmware/brake/: CMakeLists.txt
firmware/brake/include/: accumulator.h  brake_control.h  globals.h  helper.h  init.h
firmware/brake/kia_soul_ev/: CMakeLists.txt
firmware/brake/kia_soul_ev_niro/: CMakeLists.txt
firmware/brake/kia_soul_petrol/: CMakeLists.txt
firmware/brake/kia_soul_ps/: Makefile  brake_control_module.ino
firmware/brake/src/: accumulator.cpp  brake_control.cpp  communications.cpp  main.cpp  master_cylinder.cpp  timers.cpp
firmware/can_gateway/: CMakeLists.txt
firmware/can_gateway/include/: communications.h  display.h  globals.h  init.h  timer.h
firmware/can_gateway/kia_soul_ps/: Makefile  can_gateway.ino  can_gatweay.ino  kia_obd_can.h
firmware/can_gateway/src/: communications.cpp  display.cpp  init.cpp  main.cpp  timer.cpp
firmware/can_gateway/tests/: CMakeLists.txt
firmware/cmake/: OsccConfig.cmake  OsccFirmware.cmake
firmware/common/include/: brake_can_protocol.h  debug.h  dtc.h  macros.h
firmware/common/toolchain/: ArduinoToolchain.cmake  README.rst  reset.sh
firmware/control/joystick_commander/: Makefile
firmware/display/: CMakeLists.txt
firmware/display/include/: display.h  globals.h
firmware/display/src/: communications.cpp  display.cpp  init.cpp  main.cpp  timer.cpp
firmware/display/tests/: CMakeLists.txt
firmware/kia_soul/: CMakeLists.txt
firmware/kia_soul/brake/: CMakeLists.txt
firmware/kia_soul/can_gateway/: CMakeLists.txt
firmware/kia_soul/steering/: CMakeLists.txt
firmware/kia_soul/throttle/: CMakeLists.txt
firmware/null/: CMakeLists.txt  main.cpp
firmware/steering/: CMakeLists.txt
firmware/steering/include/: communications.h  globals.h  init.h  status.h  steering_control.h  timers.h
firmware/steering/kia_soul_ps/: Makefile  PID.c  PID.h  current_control_state.h  globals.cpp  globals.h  steering_constants.h  steering_control.cpp  steering_control.h  steering_control_module.ino  test_steering_control.cpp  test_steering_control.h
firmware/steering/src/: communications.cpp  globals.cpp  init.cpp  main.cpp  steering_control.cpp  timers.cpp
firmware/steering/tests/: CMakeLists.txt
firmware/tests/: brake_controller_r0_test.ino  steering_contoller_r0_test.ino  throttle_contoller_r0_test0.ino
firmware/tests/CAN_module/: CAN_module_test.ino
firmware/tests/brake_bench/: Makefile  brake_controller_r0_test.ino
firmware/tests/brake_controller/: brake_controller_r0_test.ino
firmware/tests/dac_adc_diagnostics/: Makefile  dac_adc_diagnostics.ino
firmware/tests/steering_controller/: steering_controller_r0_test.ino
firmware/throttle/: CMakeLists.txt
firmware/throttle/include/: communications.h  globals.h  init.h  throttle_control.h  timers.h
firmware/throttle/kia_soul_ps/: Makefile  current_control_state.h  throttle_control_module.ino  throttle_control_module.ino~
firmware/throttle/src/: communications.1.cpp  communications.cpp  globals.cpp  init.cpp  main.cpp  throttle_control.cpp  timers.cpp
firmware/throttle/tests/: CMakeLists.txt
utils/diagnostics_tool/: CMakeLists.txt
utils/diagnostics_tool/include/: brake_module_state.h  can_monitor.h  gateway_module_state.h  macros.h  steering_module_state.h  system_state.h  terminal_print.h  throttle_module_state.h
utils/diagnostics_tool/src/: brake_module_state.c  can_monitor.c  diagnostics.c  gateway_module_state.c  steering_module_state.c  system_state.c  terminal_print.c  throttle_module_state.c
utils/joystick_commander/: BUILD.md  CMakeLists.txt
utils/joystick_commander/include/: commander.h  joystick.h  macros.h  oscc_interface.h
utils/joystick_commander/src/: commander.c  joystick.c  main.c  oscc_interface.c  oscc_linuxcan.c  oscc_socketcan.c
(+433 files in other folders)
